; ModuleID = '/home/carl/AnghaBench/streem/src/extr_csv.c_sv_finish.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_csv.c_sv_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.csv_data* }
%struct.csv_data = type { %struct.csv_data*, i64 }

@strm_ary_null = common dso_local global i64 0, align 8
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32)* @sv_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sv_finish(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.csv_data*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.csv_data*, %struct.csv_data** %7, align 8
  store %struct.csv_data* %8, %struct.csv_data** %5, align 8
  %9 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %10 = getelementptr inbounds %struct.csv_data, %struct.csv_data* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %2
  %14 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %15 = getelementptr inbounds %struct.csv_data, %struct.csv_data* %14, i32 0, i32 0
  %16 = load %struct.csv_data*, %struct.csv_data** %15, align 8
  %17 = icmp eq %struct.csv_data* %16, null
  br i1 %17, label %18, label %28

18:                                               ; preds = %13
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %21 = getelementptr inbounds %struct.csv_data, %struct.csv_data* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @strm_ary_value(i64 %22)
  %24 = call i32 @strm_emit(%struct.TYPE_4__* %19, i32 %23, i32* null)
  %25 = load i64, i64* @strm_ary_null, align 8
  %26 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %27 = getelementptr inbounds %struct.csv_data, %struct.csv_data* %26, i32 0, i32 1
  store i64 %25, i64* %27, align 8
  br label %28

28:                                               ; preds = %18, %13, %2
  %29 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %30 = getelementptr inbounds %struct.csv_data, %struct.csv_data* %29, i32 0, i32 0
  %31 = load %struct.csv_data*, %struct.csv_data** %30, align 8
  %32 = icmp ne %struct.csv_data* %31, null
  br i1 %32, label %33, label %40

33:                                               ; preds = %28
  %34 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %35 = getelementptr inbounds %struct.csv_data, %struct.csv_data* %34, i32 0, i32 0
  %36 = load %struct.csv_data*, %struct.csv_data** %35, align 8
  %37 = call i32 @free(%struct.csv_data* %36)
  %38 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %39 = getelementptr inbounds %struct.csv_data, %struct.csv_data* %38, i32 0, i32 0
  store %struct.csv_data* null, %struct.csv_data** %39, align 8
  br label %40

40:                                               ; preds = %33, %28
  %41 = load %struct.csv_data*, %struct.csv_data** %5, align 8
  %42 = call i32 @free(%struct.csv_data* %41)
  %43 = load i32, i32* @STRM_OK, align 4
  ret i32 %43
}

declare dso_local i32 @strm_emit(%struct.TYPE_4__*, i32, i32*) #1

declare dso_local i32 @strm_ary_value(i64) #1

declare dso_local i32 @free(%struct.csv_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
